// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer/components/metrics/LabelsPill.tsx renders with labels 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-color-mode="light"
        data-dark-theme="dark"
        data-light-theme="light"
      >
        <div
          class="prc-src-BaseStyles-aopSS"
          data-portal-root="true"
        >
          <ul
            class="prc-LabelGroup-Container-E-ePP"
            data-list="true"
          >
            <li
              class="prc-LabelGroup-ItemWrapper-GkO4t"
              data-index="0"
            >
              <span
                class="prc-Token-TokenBase-te5-F prc-Token-IssueLabel-2IazM"
                data-cursor-is-interactive="false"
                data-has-remove-button="false"
                data-size="small"
                style="--label-r: 162; --label-g: 238; --label-b: 239; --label-h: 181; --label-s: 71; --label-l: 79;"
                text="enhancement"
              >
                <span
                  class="prc-Token-TokenTextContainer-cOUaD"
                >
                  enhancement
                </span>
              </span>
            </li>
            <li
              class="prc-LabelGroup-ItemWrapper-GkO4t"
              data-index="1"
            >
              <span
                class="prc-Token-TokenBase-te5-F prc-Token-IssueLabel-2IazM"
                data-cursor-is-interactive="false"
                data-has-remove-button="false"
                data-size="small"
                style="--label-r: 112; --label-g: 87; --label-b: 255; --label-h: 249; --label-s: 100; --label-l: 67;"
                text="good-first-issue"
              >
                <span
                  class="prc-Token-TokenTextContainer-cOUaD"
                >
                  good-first-issue
                </span>
              </span>
            </li>
            <li />
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-color-mode="light"
      data-dark-theme="dark"
      data-light-theme="light"
    >
      <div
        class="prc-src-BaseStyles-aopSS"
        data-portal-root="true"
      >
        <ul
          class="prc-LabelGroup-Container-E-ePP"
          data-list="true"
        >
          <li
            class="prc-LabelGroup-ItemWrapper-GkO4t"
            data-index="0"
          >
            <span
              class="prc-Token-TokenBase-te5-F prc-Token-IssueLabel-2IazM"
              data-cursor-is-interactive="false"
              data-has-remove-button="false"
              data-size="small"
              style="--label-r: 162; --label-g: 238; --label-b: 239; --label-h: 181; --label-s: 71; --label-l: 79;"
              text="enhancement"
            >
              <span
                class="prc-Token-TokenTextContainer-cOUaD"
              >
                enhancement
              </span>
            </span>
          </li>
          <li
            class="prc-LabelGroup-ItemWrapper-GkO4t"
            data-index="1"
          >
            <span
              class="prc-Token-TokenBase-te5-F prc-Token-IssueLabel-2IazM"
              data-cursor-is-interactive="false"
              data-has-remove-button="false"
              data-size="small"
              style="--label-r: 112; --label-g: 87; --label-b: 255; --label-h: 249; --label-s: 100; --label-l: 67;"
              text="good-first-issue"
            >
              <span
                class="prc-Token-TokenTextContainer-cOUaD"
              >
                good-first-issue
              </span>
            </span>
          </li>
          <li />
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/metrics/LabelsPill.tsx renders without labels 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-color-mode="light"
        data-dark-theme="dark"
        data-light-theme="light"
      >
        <div
          class="prc-src-BaseStyles-aopSS"
          data-portal-root="true"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-color-mode="light"
      data-dark-theme="dark"
      data-light-theme="light"
    >
      <div
        class="prc-src-BaseStyles-aopSS"
        data-portal-root="true"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
